[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Environments/FactionChange.gd" type="Script" id=1]

[node name="FactionChange" type="Control"]
margin_top = 268.0
margin_right = 436.0
margin_bottom = 318.0
rect_min_size = Vector2( 350, 50 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 350, 50 )

[node name="ChooseQuest" type="Button" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 19.0
margin_top = -10.0
margin_right = 120.0
margin_bottom = 10.0
text = "Select Faction"

[node name="CategoryFinder" type="PopupMenu" parent="Panel/ChooseQuest"]
margin_left = 2.0
margin_right = 192.0
margin_bottom = 230.0
rect_min_size = Vector2( 190, 230 )
size_flags_horizontal = 0
size_flags_vertical = 0
items = [ "Lost and Found", null, 0, false, false, 0, 0, null, "", false, "A Rebel Without A Cause", null, 0, false, false, 1, 0, null, "", false ]
allow_search = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Factionpoints" type="SpinBox" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -129.0
margin_top = -12.0
margin_right = -55.0
margin_bottom = 12.0
min_value = -1e+08
max_value = 1e+06
value = 100.0
align = 1

[node name="FactionID" type="SpinBox" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -289.0
margin_top = -12.0
margin_right = -215.0
margin_bottom = 12.0
min_value = -1.0
max_value = 1e+06
value = -1.0
align = 1

[node name="VSeparator" type="VSeparator" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 131.0
margin_top = -21.0
margin_right = 135.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 271.65
margin_top = -5.0
margin_right = 424.65
margin_bottom = 9.0
text = "Add                      Points"

[connection signal="pressed" from="Panel/ChooseQuest" to="." method="_on_Choose_Quest_pressed"]
[connection signal="index_pressed" from="Panel/ChooseQuest/CategoryFinder" to="." method="_on_CategoryFinder_index_pressed"]
[connection signal="value_changed" from="Panel/Factionpoints" to="." method="_on_Factionpoints_value_changed"]
[connection signal="value_changed" from="Panel/FactionID" to="." method="_on_FactionID_value_changed"]
